Add basic structure for landing page with sections

--- a/basic-html-css/index.html
+++ b/basic-html-css/index.html
@@ -1,1 +1,105 @@
+//The HTML code!!
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> LANDING PAGE</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Section................................................................................. -->
+     <section class="hero-page">
+        <div class="text-container">
+      <h2><span class="lg-text">Saad</span> here ,</h2>
+       <h1 class="lg-text">FULL  STACK  DEVELOPER</h1>
+
+        </div>
+     </section>
+    
+ <!-- SECTION...................................................................................... -->
+<section class="black-box">
+  <h2>WORK I CAN DO FOR <span>YOU</span></h2>
+</section>
+
+<!-- card section........................................................................................ -->
+<section class="work">
+<div class="grid-item">
+    <div class="card">
+
+        <div class="image-container">
+    <img src="webdev.jpg" alt="WEB DEVELOPMENT">
+        </div>
+
+
+        <div class="card-content">
+    <h3>WEB DEVELOPMENT</h3>
+    <p> I build responsive and dynamic websites using modern technologies like HTML, CSS, Java</p>
+
+
+        </div>
+    </div>
+
+</div>
+<!-- card 2 -->
+<div class="grid-item">
+      <div class="card">
+
+        <div class="image-container">
+    <img src="uiux1.jpg" alt="UI/UX DESIGN">
+        </div>
+
+
+        <div class="card-content">
+    <h3>UI / UX</h3>
+    <p> I AM ALSO A UI/UX DESIGNER. I CREATE MODERN AND USER-FRIENDLY DESIGNS FOR WEBSITES AND APPLICATIONS.</p>
+
+
+        </div>
+    </div>
+</div>
+
+    <!-- card 3 -->
+
+<div class="grid-item">
+      <div class="card">
+
+        <div class="image-container">
+    <img src="mobile.jpg" alt="MOBILE APP DEVELOPMENT">
+        </div>
+
+        <div class="card-content">
+    <h3>MOBILE APP DEVELOPMENT</h3>
+    <p> I build MOBILE APPLICATIONS FOR ANDROID AND IOS PLATFORMS USING FLUTTER.</p>
+
+
+        </div>
+    </div>
+  </div> 
+ 
+</section>
+<!-- another section................................................................................................. -->
+
+
+
+<section class="personal">
+<div class="contact">
+    <h2>CONTACT  ME</h2>
+    <p>If you are interested in working together or have any questions, feel free to reach out to me using the form below.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit.
+    </p>
+
+</div>
+
+
+<div class="about-me">
+
+    <h2>ABOUT ME</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem unde similique voluptas repellat eos libero eaque eligendi natus sit amet facere soluta, magni quisquam labore atque perferendis odio asperiores quae!</p>
+</div>
+</section>
+
+
+</body>
+</html>
